mash: Support shelf item selection via ET_GESTURE_TAP.

Add basic Mojo struct traits support & test for tap gestures.
(this is the minimum needed for tapping on shelf items)

Warn and bail on sending unsupported event types.
(otherwise it's tough to track these problems down)

Bug: 766783, 767087
Test: Chrome OS shelf items launch via touch w/ about:flags Enable shelf model synchronization"
Change-Id: I2aa813be94ce321897838c2e62de5d3097ac04ca