ui/events/mojo/event_struct_traits.h
@@ -24,6 +24,7 @@ struct StructTraits<ui::mojom::EventDataView, EventUniquePtr> {
   static const ui::LatencyInfo& latency(const EventUniquePtr& event);
   static ui::mojom::KeyDataPtr key_data(const EventUniquePtr& event);
   static ui::mojom::PointerDataPtr pointer_data(const EventUniquePtr& event);
+  static ui::mojom::GestureDataPtr gesture_data(const EventUniquePtr& event);
   static bool Read(ui::mojom::EventDataView r, EventUniquePtr* out);
 };
 
